libinput: Add guard around empty outputs when assigning devices

Although kwin always persists a LogicalOutput this is not true for
backend outputs.

BUG: 520145


(cherry picked from commit 10c1fc88571edaba71bd1e1dce53169bceb695c7)

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>